# python-design-patterns

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  constants.py  example_factory.py  main.py  pyproject.toml
FactoryMethod/: README.md  line_base.py  line_factory.py  normal_line.py  prioritary_line.py
TemplateMethod/: line_base.py  normal_line.py  prioritary_line.py
