[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["leonardo"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
